--- a/symbolicTutorial-distinguishingFeatures.ipynb
+++ b/symbolicTutorial-distinguishingFeatures.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from symbolic import Symbolic, Reason"
+    "from symbolic import Symbolic, Reason, top_mask"
    ]
   },
   {
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.95668 secs\n"
+      "0.9563139999999999 secs\n"
      ]
     },
     {
@@ -66,16 +66,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.2538859999999996 secs\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'is': [['0'], ['1']], 'is not': None}"
+       "(True, 'has distinguishing features')"
       ]
      },
      "execution_count": 3,
@@ -84,23 +77,46 @@
     }
    ],
    "source": [
+    "s0 = Symbolic('0 1 0 6 2')\n",
+    "r.determine(s0, 'foo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'is': [['1'], ['0']], 'is not': None}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "r = Reason()\n",
-    "s1 = Symbolic(\"0 1 9 3 6\")\n",
+    "s1 = Symbolic(\"7 8 0 1 9 3 6\")\n",
     "r.add_pattern(pattern=s1, attribute='foo', relation='is')\n",
-    "s2 = Symbolic(\"0 1 7 4 2\")\n",
+    "s2 = Symbolic(\"4 0 1 7 4 2\")\n",
     "r.add_pattern(pattern=s2, attribute='foo', relation='is')\n",
-    "s3 = Symbolic(\"0 1 5 0 9\")\n",
+    "s3 = Symbolic(\"2 9 0 1 5\")\n",
     "r.add_pattern(pattern=s3, attribute='foo', relation='is')\n",
-    "s4 = Symbolic(\"1 0 4 6 7\")\n",
+    "s4 = Symbolic(\"6 1 0 4 6 7\")\n",
     "r.add_pattern(pattern=s4, attribute='foo', relation='is')\n",
-    "s5 = Symbolic(\"1 0 3 7 8\")\n",
-    "r.add_pattern(pattern=s5, attribute='foo', relation='is', elapse=True)\n",
+    "s5 = Symbolic(\"8 9 1 1 0\")\n",
+    "r.add_pattern(pattern=s5, attribute='foo', relation='is')\n",
     "r.distinguishing_features['foo']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -109,22 +125,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.744222 secs\n"
+      "42.994692 secs\n",
+      "0 [('6', ['_0']), ('1', ['_1']), ('0', ['_2']), ('4', ['_3']), ('6', ['_4']), ('7', ['_5'])]\n",
+      "1 [('8', ['_0']), ('9', ['_1']), ('1', ['_2']), ('1', ['_3']), ('0', ['_4'])]\n",
+      "2 [('7', ['_0']), ('8', ['_1']), ('0', ['_2']), ('1', ['_3']), ('9', ['_4']), ('3', ['_5']), ('6', ['_6'])]\n",
+      "3 [('4', ['_0']), ('0', ['_1']), ('1', ['_2']), ('7', ['_3']), ('4', ['_4']), ('2', ['_5'])]\n",
+      "4 [('2', ['_0']), ('9', ['_1']), ('0', ['_2']), ('1', ['_3']), ('5', ['_4'])]\n",
+      "[0, 1] -> [['1'], ['1'], ['1', '0'], ['0']]\n",
+      "[2, 3, 4] -> [['0'], ['0', '1'], ['1']]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([('1', ['_0']), ('0', ['_1'])], [('0', ['_0']), ('1', ['_1'])])"
+       "(['1', '0'], ['0', '1'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dis1, dis2 = r.distinguishingOR('foo', debug=False)\n",
+    "dis1, dis2 = r.distinguishingOR('foo', debug=True)\n",
     "top_mask(dis1), top_mask(dis2)"
    ]
   }
